// Copyright 2017 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// This file includes Safe Browsing WebUI protocol buffer.

syntax = "proto2";

package safe_browsing;

option optimize_for = LITE_RUNTIME;

// The message that's passed from SafeBrowsing WebUI to the
// V4LocalDatabaseManager to populate the fields related to the database.
message DatabaseManagerInfo {
  // Describes the status of the last update request, and an instance of it is
  // passed from V4LocalDataBaseManager to V4UpdateProtocolManager to populate
  // it.
  message UpdateInfo {
    // Network status code when OnURLFetchComplete() is called in
    // V4UpdateProtocolManager.
    optional int32 network_status_code = 1;

    // Time when the last networ_status_code was recorded from
    // OnURLFetchComplete() in V4UpdateProtocolManager.
    optional int64 last_update_time_micros = 2;
  }

  // The update information.
  optional UpdateInfo update_info = 1;

  // Describes the state of the database. An instance of DatabaseInfo is passed
  // from V4LocalDataBaseManager to the V4Database to populate it.
  message DatabaseInfo {
    // The value recording if the database updated was successful.
    optional bool update_successful = 1;

    // The database size as the total sum of the store sizes in the Database.
    optional int64 database_size = 2;

    // Describes the state of a store. An instance of the StoreInfo is passed
    // from V4Database to V4Store to populate it.
    message StoreInfo {
      // The store file name.
      optional string file_name = 1;

      // The store file size.
      optional int64 file_size = 2;

      // The status of applying the updates fetched from the server to the
      // store. The values of merge_status correspond to the enum
      // ApplyUpdateResult in V4Store.
      optional int32 update_status = 3;
    }

    // The Store information.
    repeated StoreInfo store_info = 3;
  }

  // The Database information.
  optional DatabaseInfo database_info = 2;
}
